fix the overflow

--- a/core.css
+++ b/core.css
@@ -118,6 +118,8 @@ body, html {
 
 #display {
     max-width: 980px;
+    max-height: 600px;
+    position: relative;
 }
 
 #display-wrap {
@@ -126,6 +128,8 @@ body, html {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    max-height: 100%;
+    overflow-y: auto;
 }
 
 .scale-up {
